# 2110327-ALGO

./: .gitignore  CMakeLists.txt  test2.cpp  test_build
1-brute_force/: a58_q1_triple.cpp  a64_q1_permu_before.cpp  a65_q1_tower_defense.cpp  a66_f1_make_zero (SFConflict khattiya.mos 2026-01-14-17-58-40).cpp  a66_f1_make_zero.cpp  a66_q1a_day_cover.cpp  a67_q1a_abc_forbidden  a67_q1a_abc_forbidden.cpp  a67_q1b_shoot_em_up.cpp  da66_m1_line_paint.cpp  da67_f_abc_permutation.cpp  ex00e4.cpp  ex00e5.cpp
2_sorting/: a65_q2a_huge_array.cpp  a66_q2a_insertion_count.cpp
4_divide_and_conquer/: a57_m4_gaa.cpp  a57_m5_mcs2.cpp  a57_m5_mcs2_.cpp  a58_m3_hadamard.cpp  a59_midp3_similar.cpp  a59_midp4_mcsw.cpp  a60_q1_matmod.cpp  a60b_q2_pareto.cpp  a61_q1_thanos.cpp  a62_q1a_recur.cpp  a62_q1b_virus.cpp  a63_q1b_virus2.cpp  a64_q1_lawn_moving.cpp  a65_q1_mt_matrix.cpp  a66_q1a_double_end_sequence.cpp  a66_q1b_triforce.cpp  a67_q1a_mss_alternate.cpp  ex01e2.cpp  ex01e3.cpp  ex01e4.cpp  ex01h1.cpp  ex01m2.cpp  ex02e3_bs.cpp  ex02h1_closest.cpp
5_dynamic_programming/: a59_midp1_lcs.cpp  a59_q1_quick_sum.cpp  a60a_midp3_bigger.cpp  a60b_mid_p2_rope.cpp  a60b_mid_p3_divide.cpp  a60b_q1_diagsum.cpp  a62_q1a_jumping.cpp  a62_q1b_chocolate.cpp  a66_q2a_eating_futomaki.cpp  a66_q2b_multi_recurrence.cpp  a66_q4a_billboard_feng_shui.cpp  a67_q2a_jump2.cpp  a67_q2a_stable_sort.cpp  da66_f1_linear_recurrence.cpp  ex02e1_fibo.cpp  ex02e2_cnk.cpp  ex02m1_triangle.cpp  ex03e1_lcs.cpp  ex03e2_mcm.cpp  ex03m1_billboard.cpp  ex03m2_lis.cpp  ex03m3_pressure_station.cpp
5_dynamic_programming_redo/:  a60b_mid_p2_rope.cpp  a59_midp1_lcs.cpp  a59_q1_quicksum.cpp  a60a_midp1_knapsack.cpp  a60b_q1_diagsum.cpp  a62_q1a_jumping.cpp  a65_q2a_distance_one.cpp  a66_q2a_eating_futomaki.cpp  a66_q2b_multi_recurrence.cpp  a67-q2b-d-diff.cpp  a67_q2a_jump2.cpp  da66_f1_linear_recurrence.cpp  da67_f_one_two_apart.cpp  ex02e1_fibo.cpp  ex02e2_cnk.cpp  ex02m1_triangle.cpp  ex03e1_lcs.cpp  ex03e3_coin.cpp  ex03m1_billboard.cpp  ex03m2_lis.cpp  ex03m3_pressure_station.cpp
6_graph/: a58_q3_p3a_hacking.cpp  a59_q3_cycle.cpp  a59_q3_hole.cpp  a60_q3a_component.cpp  a60a_q3_component.cpp  a60a_q3_xor_road.cpp  a60b_q3_ikea.cpp  a62_q2a_line_graph.cpp  a64_q3_wildfire.cpp  a65_q0_degrees.cpp  a66_f1_ev_truck  a66_f1_ev_truck.cpp  a66_f1_largest_diff_path.cpp  a67-longest-path-dag.cpp  a67-longest-path-dag_recursive.cpp  a67_q3a_equidistance.cpp  a67_q3b_near_distance.cpp  a68_q3z_horse_and_goat.cpp  da66_f2_grid_loop.cpp  ex05e2_planning.cpp  ex05e3_catapult.cpp  ex05m1_cycle.cpp  ex06e1_cable.cpp
7_shortest_path/: a58_q3_p3a_hacking.cpp  a60b_q3_perimeter.cpp  a61_q2_farthest.cpp  a62_q2a_pandemic.cpp  a64_q3_shortest_start.cpp  a68_q3a_fed_y.cpp  da66_f1_sea_bridge.cpp  da67_f_border_extend.cpp  ex05e1_shortest.cpp  ex05m2_connection.cpp  ex06e2_shortest_negative.cpp  ex06e3_columbia.cpp  ex06m2_exchange.cpp
8_statespace/: a57_q4_journey.cpp  a65_q4a_tower.cpp  a66_q4a_billboard_feng_shui.cpp  a66_q4a_clique.cpp  a67_f_strange_house_2.cpp  (+9 more)
(+198 files in other folders)
