cmake_minimum_required(VERSION 4.1)
project(algo_codes)

set(CMAKE_CXX_STANDARD 14)

add_executable(algo_codes
        1-brute_force/a58_q1_triple.cpp
        1-brute_force/a64_q1_permu_before.cpp
        1-brute_force/a65_q1_tower_defense.cpp
        1-brute_force/a66_f1_make_zero.cpp
        1-brute_force/a66_q1a_day_cover.cpp
        1-brute_force/a67_q1a_abc_forbidden.cpp
        1-brute_force/a67_q1b_shoot_em_up.cpp
        1-brute_force/da66_m1_line_paint.cpp
        1-brute_force/da67_f_abc_permutation.cpp
        1-brute_force/ex00e4.cpp
        1-brute_force/ex00e5.cpp
        2_sorting/a65_q2a_huge_array.cpp
        2_sorting/a66_q2a_insertion_count.cpp
        4_divide_and_conquer/a57_m4_gaa.cpp
        4_divide_and_conquer/a57_m5_mcs2.cpp
        4_divide_and_conquer/a57_m5_mcs2_.cpp
        4_divide_and_conquer/a58_m3_hadamard.cpp
        4_divide_and_conquer/a59_midp3_similar.cpp
        4_divide_and_conquer/a59_midp4_mcsw.cpp
        4_divide_and_conquer/a60_q1_matmod.cpp
        4_divide_and_conquer/a60b_q2_pareto.cpp
        4_divide_and_conquer/a61_q1_thanos.cpp
        4_divide_and_conquer/a62_q1a_recur.cpp
        4_divide_and_conquer/a62_q1b_virus.cpp
        4_divide_and_conquer/a63_q1b_virus2.cpp
        4_divide_and_conquer/a64_q1_lawn_moving.cpp
        4_divide_and_conquer/a65_q1_mt_matrix.cpp
        4_divide_and_conquer/a66_q1a_double_end_sequence.cpp
        4_divide_and_conquer/a66_q1b_triforce.cpp
        4_divide_and_conquer/a67_q1a_mss_alternate.cpp
        4_divide_and_conquer/ex01e2.cpp
        4_divide_and_conquer/ex01e3.cpp
        4_divide_and_conquer/ex01e4.cpp
        4_divide_and_conquer/ex01h1.cpp
        4_divide_and_conquer/ex01m2.cpp
        4_divide_and_conquer/ex02e3_bs.cpp
        4_divide_and_conquer/ex02h1_closest.cpp
        5_dynamic_programming/a59_midp1_lcs.cpp
        5_dynamic_programming/a59_q1_quick_sum.cpp
        5_dynamic_programming/a60a_midp3_bigger.cpp
        5_dynamic_programming/a60b_mid_p2_rope.cpp
        5_dynamic_programming/a60b_mid_p3_divide.cpp
        5_dynamic_programming/a60b_q1_diagsum.cpp
        5_dynamic_programming/a62_q1a_jumping.cpp
        5_dynamic_programming/a62_q1b_chocolate.cpp
        5_dynamic_programming/a66_q2a_eating_futomaki.cpp
        5_dynamic_programming/a66_q2b_multi_recurrence.cpp
        5_dynamic_programming/a66_q4a_billboard_feng_shui.cpp
        5_dynamic_programming/a67_q2a_jump2.cpp
        5_dynamic_programming/a67_q2a_stable_sort.cpp
        5_dynamic_programming/da66_f1_linear_recurrence.cpp
        5_dynamic_programming/ex02e1_fibo.cpp
        5_dynamic_programming/ex02e2_cnk.cpp
        5_dynamic_programming/ex02m1_triangle.cpp
        5_dynamic_programming/ex03e1_lcs.cpp
        5_dynamic_programming/ex03e2_mcm.cpp
        5_dynamic_programming/ex03m1_billboard.cpp
        5_dynamic_programming/ex03m2_lis.cpp
        5_dynamic_programming/ex03m3_pressure_station.cpp)
